# DEPRECATED_rpc

./: CMakeLists.txt
doc/: specifications.md
include/bunsan/rpc/: global_state.hpp  handle.proto  header.proto
scripts/: grpc.cmake
src/lib/: global_state.cpp
